--- a/app/jfrog-logs/default/data/ui/views/xray.xml
+++ b/app/jfrog-logs/default/data/ui/views/xray.xml
@@ -1,4 +1,4 @@
-<form version="1.1" script="jfrog-logs.js" stylesheet="jfrog-logs.css" hideEdit="true" isDashboard="true">
+<form version="1.1" script="jfrog-logs.js" stylesheet="jfrog-logs.css" hideEdit="false" isDashboard="false">
   <label>Xray</label>
   <description>Xray Log Analytics and Platform Metrics</description>
   <fieldset submitButton="false" autoRun="true">
